--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,18 @@
       <section class="panel">
         <h2>2) Run OCR</h2>
         <button id="runBtn">Run OCR</button>
+        <button id="autoBtn">Auto-Tune OCR</button>
         <div id="status" class="status"></div>
         <pre id="output" class="output"></pre>
       </section>
+
+
+      <!-- <section class="panel">
+        <h2>2) Run OCR</h2>
+        <button id="runBtn">Run OCR</button>
+        <div id="status" class="status"></div>
+        <pre id="output" class="output"></pre>
+      </section> -->
     </main>
   </body>
 </html>
