add zones for ocr

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,13 @@
         <h2>1) Select an image</h2>
         <input id="fileInput" type="file" accept="image/*" />
         <div class="row">
-          <img id="preview" alt="preview" />
-          <canvas id="workCanvas" hidden></canvas>
-        </div>
+  <div id="previewWrap" class="preview-wrap">
+    <img id="preview" alt="preview" />
+    <div id="overlay"></div>
+  </div>
+  <canvas id="workCanvas" hidden></canvas>
+</div>
+
       </section>
 
       <section class="panel">
